# chat-data

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  config.yaml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: auth.py  charts.py  chat.py  cleaning.py  datasets.py  teams.py
backend/app/core/: database.py  security.py
backend/app/models/: __init__.py  conversation.py  dataset.py
backend/app/schemas/: __init__.py  chart.py  cleaning.py  conversation.py  dataset.py  team.py  user.py
backend/app/services/: __init__.py  ai_service.py  cleaning_service.py  code_executor.py  dataset_service.py  visualization_service.py
backend/tests/: conftest.py  test_ai_service.py  test_auth.py  test_cleaning_service.py  test_code_executor.py  test_dataset_service.py  test_schemas.py  test_teams.py
docs/plans/: 2026-01-29-chat-data-platform-design.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/pages/: Analysis.tsx  ChartsGallery.tsx  Dashboard.tsx  DatasetDetail.tsx  DatasetList.tsx  Login.tsx  Profile.tsx  Settings.tsx  Teams.tsx
frontend/src/types/: index.ts
